--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ru"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Академия HTML</title>
+    <title>Rusty Launcher</title>
     <link rel="stylesheet" href="index_files/style.css">
   </head>
   <body>
 
     <main>
       <a href="https://htmlacademy.ru/">
-        <img src="index_files/bane.svg" width="300" height="300" alt="HTML Academy">
+        <img src="index_files/bane.svg" width="300" height="300" alt="Rusty Launcher">
       </a>
 
       <h1>Академия HTML</h1>
