--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Академия HTML</h1>
 
       <p>
-        <a href="https://github.com/htmlacademy/htmlacademy.github.io">github.com/htmlacademy/htmlacademy.github.io</a>
+        <a href="https://vk.com/rusty_io">https://vk.com/rusty_io</a>
       </p>
     </main>
 
