--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>Rusty Launcher</title>
-    <link rel="stylesheet" href="index_files/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 
     <main>
       <a href="https://htmlacademy.ru/">
-        <img src="index_files/bane.svg" width="300" height="300" alt="Rusty Launcher">
+        <img src="bane.svg" width="300" height="300" alt="Rusty Launcher">
       </a>
 
       <h1>Академия HTML</h1>
