--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="bane.svg" width="300" height="300" alt="Rusty Launcher">
       </a>
 
-      <h1>Академия HTML</h1>
+      <h1>Rusty Launcher beta</h1>
 
       <p>
         <a href="https://vk.com/rusty_io">https://vk.com/rusty_io</a>
