--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body>
 
     <main>
-      <a href="https://htmlacademy.ru/">
+      <a href="https://vk.com/rusty_io">
         <img src="bane.svg" width="300" height="300" alt="Rusty Launcher">
       </a>
 
       <h1>Rusty Launcher beta</h1>
 
       <p>
-        <a href="https://vk.com/rusty_io">https://vk.com/rusty_io</a>
+        <a href="https://vk.com/rusty_io">Vk group</a>
       </p>
     </main>
 
