--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <main>
       <a href="https://vk.com/rusty_io">
-        <img src="bane.svg" width="300" height="300" alt="Rusty Launcher">
+        <img src="bane.svg" width="300" height="300" alt="Rusty БЕЙН">
       </a>
 
       <h1>Rusty Launcher beta</h1>
