--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       <h1>Документация API</h1>
       
       <h2>Метод `get_game_list.php`</h2>
-      <p>Этот метод возвращает список игр с информацией о каждой игре.</p>
+      <p>Этот метод возвращает список девблогов с информацией о каждом девблоге.</p>
       <h3>Запрос</h3>
       <ul>
         <li>URL: <code>http://rusty32307.tw1.ru/api/get_game_list.php</code></li>
         <li>Метод: GET</li>
       </ul>
       <h3>Ответ</h3>
-      <p>JSON-массив объектов, каждый объект представляет игру:</p>
+      <p>JSON-массив объектов, каждый объект представляет девблог:</p>
       <pre><code>
 [
   {"GameID":"1","ImageSource":"...","Title":"MyRust 220","Status":"Null"},
